fix: 전체적인 API 수정 완료 및 로컬 환경 테스트 완료